--- a/Task1/Task1.csproj
+++ b/Task1/Task1.csproj
@@ -48,12 +48,15 @@
   <ItemGroup>
     <Compile Include="Character.cs" />
     <Compile Include="EmptyTile.cs" />
+    <Compile Include="Enemy.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Goblin.cs" />
+    <Compile Include="Hero.cs" />
     <Compile Include="Obstacle.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
