--- a/Task1/Task1.csproj
+++ b/Task1/Task1.csproj
@@ -55,15 +55,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form2.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form2.Designer.cs">
-      <DependentUpon>Form2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="GameEngine.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="GameEngine.cs" />
     <Compile Include="Goblin.cs" />
     <Compile Include="Hero.cs" />
     <Compile Include="Map.cs" />
@@ -73,9 +65,6 @@
     <Compile Include="Tile.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Form2.resx">
-      <DependentUpon>Form2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
